--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -1,3 +1,5 @@
+ARG ENABLE_XDEBUG
+
 FROM umanit/php:7.0
 
 RUN apk --no-cache add curl git subversion openssh openssl mercurial zlib-dev \
@@ -26,5 +28,9 @@ RUN curl -s -f -L -o /tmp/installer.php https://raw.githubusercontent.com/compos
 # forward request and error logs to docker log collector
 RUN ln -sf /dev/stdout /var/log/php/fpm-access.log \
 	&& ln -sf /dev/stderr /var/log/php/fpm-error.log
+
+# add entrypoint
+COPY ./docker-entrypoint.sh /
+ENTRYPOINT ["/bin/sh", "/docker-entrypoint.sh"]
 
 CMD ["php-fpm"]
