Change xdebug activation
- Remove necessity of docker-entrypoint.sh
- Activate xdebug via umanit-php.ini file

--- a/confs/php/php/conf.d/umanit-php.ini
+++ b/confs/php/php/conf.d/umanit-php.ini
@@ -2,3 +2,6 @@ memory_limit = 256M
 date.timezone = Europe/Paris
 upload_max_filesize = 200M
 post_max_size = 500M
+
+# activate xdebug only if the env var is specified
+xdebug.remote_enable=${ENABLE_XDEBUG}
