Add support of host.docker.internal
- When the image is launched with macos, a special host
  "host.docker.internal" is made and ping the host machine. This is not
  available on linux, so we add it.

--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -32,4 +32,8 @@ RUN curl --silent --fail --location --retry 3 --output /tmp/installer.php --url 
 RUN ln -sf /dev/stdout /var/log/php/fpm-access.log \
 	&& ln -sf /dev/stderr /var/log/php/fpm-error.log
 
+# add entrypoint
+COPY ./docker-entrypoint.sh /
+ENTRYPOINT ["/bin/bash", "/docker-entrypoint.sh"]
+
 CMD ["php-fpm"]
