Multiple modifications for better use on linux
- The user "umanit" is created during the build of the image, not in the
  entrypoint.
- The php-fpm process is launched with the user "umanit", not "www-data"
- The php-fpm logs are no longer redirect to file, we let the default
  behaviour.

--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -1,15 +1,17 @@
-ARG ENABLE_XDEBUG
-
 FROM umanit/php:7.0
 
-RUN apk --no-cache add bash curl git subversion openssh openssl mercurial zlib-dev \
-    && mkdir -p /var/log/php
+ARG USER_ID=1000
+
+RUN apk --no-cache add bash curl git subversion openssh openssl mercurial zlib-dev
+
+# add local user "umanit" with UID 1000 (or any other if USER_ID is override)
+RUN adduser -s /bin/bash -u $USER_ID -D -h /home/umanit umanit
 
 # copy custom confs
 COPY ./confs/php /usr/local/etc/
 COPY ./confs/bashrc /root/.bashrc
-COPY ./confs/bashrc /home/www-data/.bashrc
-RUN chown www-data:www-data /home/www-data/.bashrc
+COPY ./confs/bashrc /home/umanit/.bashrc
+RUN chown umanit:umanit /home/umanit/.bashrc
 
 ENV COMPOSER_ALLOW_SUPERUSER 1
 ENV COMPOSER_HOME /tmp
@@ -28,10 +30,6 @@ RUN curl -s -f -L -o /tmp/installer.php https://raw.githubusercontent.com/compos
  && php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION} \
  && composer --ansi --version --no-interaction \
  && rm -rf /tmp/* /tmp/.htaccess
-
-# forward request and error logs to docker log collector
-RUN ln -sf /dev/stdout /var/log/php/fpm-access.log \
-	&& ln -sf /dev/stderr /var/log/php/fpm-error.log
 
 # add entrypoint
 COPY ./docker-entrypoint.sh /
