--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -1,19 +1,22 @@
-ARG ENABLE_XDEBUG
-
 FROM umanit/php:7.3
 
-RUN apk --no-cache add bash curl git subversion openssh openssl mercurial zlib-dev \
-    && mkdir -p /var/log/php
+ARG USER_ID=1000
+
+RUN apk --no-cache add bash curl git subversion openssh openssl mercurial zlib-dev
+
+# add local user "umanit" with UID 1000 (or any other if USER_ID is override)
+RUN adduser -s /bin/bash -u $USER_ID -D -h /home/umanit umanit
 
 # copy custom confs
 COPY ./confs/php /usr/local/etc/
 COPY ./confs/bashrc /root/.bashrc
-COPY ./confs/bashrc /home/www-data/.bashrc
-RUN chown www-data:www-data /home/www-data/.bashrc
+COPY ./confs/bashrc /home/umanit/.bashrc
+RUN chown umanit:umanit /home/umanit/.bashrc
 
 ENV COMPOSER_ALLOW_SUPERUSER 1
 ENV COMPOSER_HOME /tmp
 ENV COMPOSER_VERSION 1.8.5
+ENV COMPOSER_MEMORY_LIMIT -1
 
 RUN curl --silent --fail --location --retry 3 --output /tmp/installer.php --url https://raw.githubusercontent.com/composer/getcomposer.org/cb19f2aa3aeaa2006c0cd69a7ef011eb31463067/web/installer \
  && php -r " \
@@ -27,10 +30,6 @@ RUN curl --silent --fail --location --retry 3 --output /tmp/installer.php --url 
  && php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION} \
  && composer --ansi --version --no-interaction \
  && rm -f /tmp/installer.php
-
-# forward request and error logs to docker log collector
-RUN ln -sf /dev/stdout /var/log/php/fpm-access.log \
-	&& ln -sf /dev/stderr /var/log/php/fpm-error.log
 
 # add entrypoint
 COPY ./docker-entrypoint.sh /
